--- a/src/app/clients/clients.component.html
+++ b/src/app/clients/clients.component.html
@@ -1,7 +1,7 @@
 
 
 <div class="container">
-    <h2 style="color:#0B0B0B; font-weight:700; text-align:center; margin: 15px 0;">Official Clients And Partners</h2>
+    <h2 style="color:#0B0B0B; font-weight:700; text-align:center; margin-top: 80px;">Official Clients And Partners</h2>
 <h2 style="color: #0C3FB4; font-weight:700; text-align:center;margin: 30px 0;">Our Client</h2>
     <div class="row">
         <div class="col-md-2 col-sm-4 col-4 Img" >
