--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<app-nav></app-nav>
+<app-contact-us/>
+<app-values/>
+<app-services></app-services>
+<app-about-us/>
+<app-clients/>
