--- a/src/app/values/values.component.html
+++ b/src/app/values/values.component.html
@@ -1,4 +1,5 @@
-<div class="container values">
+<div class="container ">
+    <div class="values">
     <div class="d-flex flex-column values1">
         <h1 class="ourValues">our values</h1>
         <p class="valuesP1">we carry out work with flexibility and high effectiveness, provide the best levels of
@@ -27,4 +28,5 @@
             <img src="assets/Vector.svg" alt="Image4">
         </div>
     </div>
+</div>
 </div>
