--- a/src/app/about-us/about-us.component.scss
+++ b/src/app/about-us/about-us.component.scss
@@ -1,3 +1,7 @@
+.row{
+    margin-top:100px;
+}
+
 .card1,
 .card2 {
     width: 578px;
@@ -7,7 +11,7 @@
     opacity: 0px;
     background-color: #ffffff;
     box-shadow: 4px 10px 30px 0px #0000000f;
-    margin: 20px 0;
+    margin-top: 20px;
     max-width: 100%;
 
 }
@@ -49,7 +53,7 @@
 }
 
 
-@media (min-width: 900px) {
+@media (max-width: 900px) {
     
     .Images{
         flex-wrap: wrap;
