--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,10 +1,11 @@
 <div class="parent">
   <div class="container">
-    <h2 style="
+    <h2  style="
         color: #0b0b0b;
         font-weight: 600;
         text-align: center;
-        margin: 20px 0;
+        margin-top: 80px;
+        margin-bottom:20px;
       ">
       Our Services
     </h2>
