--- a/src/app/values/values.component.scss
+++ b/src/app/values/values.component.scss
@@ -9,6 +9,7 @@
     font-size: 40px;
     font-weight: 600;
     line-height: 1.9;
+
 }
 
 .valuesP1,
@@ -26,8 +27,7 @@
     display: flex;
     padding: 0 30px;
     height: 800px;
-   margin-top: 30px;
-   margin-bottom: 30px;
+   margin-top: 100px;
    overflow: hidden;
 }
 
@@ -35,16 +35,16 @@
 
 .Image3 {
     position: relative;
-    bottom: 590px;
-    left: 370px;
+    bottom:87%;
+    left: 375px;
 
 }
 
 
 .Image4 {
     position: relative;
-    bottom: 200%;
-    left: 110px;
+    bottom: 0px;
+    left: 0px;
     z-index: 1;
     /* Ensure Image4 is in front */
 
@@ -54,7 +54,8 @@
 
 .Image2 {
     position: relative;
-    bottom: 300px;
+     bottom: 300px;
+   
 
 }
 
@@ -69,12 +70,16 @@
     margin: 60px 0;
 }
 
+.values1
+ {
+    margin: 150px 0;
+}
+
 
 .Image1,
 .Image2,
 .Image3 {
     position: relative;
-
     z-index: 3;
     /* Ensure images are behind Image4 */
 }
