--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'normalize.css';
+
 body{
     font-family:"Blinker";
 }
+
+/* Reset margin and padding for all elements */
+* {
+    margin: 0;
+    padding: 0;
+}
+
