--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,140 @@
-<p>footer works!</p>
+<div class="container d-flex justify-content-evenly mb-5 flex-wrap">
+  <div>
+    <div class="mb-5">
+      <a class="navbar-brand ms-4" routerLink="/" style="color: #0c3fb4; font-size: 28px; font-weight: 600">
+        <img src="favicon.ico" width="50" height="50" alt="Global Company" />
+        <span class="ms-3">Global Company</span>
+      </a>
+    </div>
+    <div class="d-flex mb-3">
+      <img class="me-3" src="assets/phone.png" alt="Phone Company" width="23" height="23" />
+      <p style="font-size: 16px; font-weight: 600; color: #0c3fb4">
+        Prime Office :
+        <a style="font-weight: 400; text-decoration: none; color: #0c3fb4" href="tel:+966-540648582">
+          +966-540648582</a>
+      </p>
+    </div>
+
+    <div class="d-flex mb-3">
+      <img class="me-3" src="assets/address.png" alt="Address Company" width="24" height="30" />
+      <p style="font-size: 16px; font-weight: 600; color: #0c3fb4">
+        KSA Office :
+        <span style="font-weight: 400; color: #0c3fb4">
+          sari Street, Al Faisaliah
+          <br />District ,Jeddah 234457.
+        </span>
+      </p>
+    </div>
+
+    <div class="d-flex align-items-center mb-2">
+      <img class="me-3" src="assets/Mail.png" alt="E-mail Company" width="23" height="18" />
+
+      <div>
+        <a href="mailto:info&#64;glsca.com" style="
+            font-size: 16px;
+            font-weight: 400;
+            text-decoration: none;
+            color: #0c3fb4;
+          ">
+          info&#64;glsca.com
+        </a>
+        <br />
+        <a href="mailto:mag&#64;glsca.com" style="
+            font-size: 16px;
+            font-weight: 400;
+            text-decoration: none;
+            color: #0c3fb4;
+          ">
+          mag&#64;glsca.com
+        </a>
+      </div>
+    </div>
+
+    <div class="d-flex align-items-center mb-4">
+      <img class="me-4 mt-4" src="assets/Facebook - Original.png" alt="E-mail Company" width="22" height="22" />
+      <img class="me-4 mt-4" src="assets/Twitter - Original.png" alt="E-mail Company" width="22" height="22" />
+
+      <img class="me-4 mt-4" src="assets/Instagram - Original.png" alt="E-mail Company" width="22" height="22" />
+      <img class="me-4 mt-4" src="assets/LinkedIn - Original.png" alt="E-mail Company" width="22" height="22" />
+    </div>
+
+    <p class="mb-3" style="color: #8f90a6">© 2021 . All rights reserved.</p>
+  </div>
+
+
+  <div>
+     <p class="my-5" style="font-family: 'Open Sans';
+     font-size: 20px;
+     font-weight: 600;
+     line-height: 27.24px;
+color:#0c3fb4;
+     ">Take a Tour</p>
+
+     <p class="mb-4" style="font-family: 'Open Sans';
+     font-size: 18px;
+     font-weight: 400;
+     line-height: 24.51px;
+     color:#0c3fb4;
+     "> About Us</p>
+
+<p class="mb-4" style="font-family: 'Open Sans';
+font-size: 18px;
+font-weight: 400;
+line-height: 24.51px;
+color:#0c3fb4;
+"> Our Values</p>
+ <p class="mb-4" style="font-family: 'Open Sans';
+ font-size: 18px;
+ font-weight: 400;
+ line-height: 24.51px;
+ color:#0c3fb4;
+ "> Our Services</p>
+  </div>
+
+
+  <div >
+    <p class="my-5" style="font-family: 'Open Sans';
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 27.24px;
+color:#0c3fb4;
+    ">Our Company</p>
+
+    <p class="mb-4" style="font-family: 'Open Sans';
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24.51px;
+    color:#0c3fb4;
+    "> About us</p>
+
+<p class="mb-4" style="font-family: 'Open Sans';
+font-size: 18px;
+font-weight: 400;
+line-height: 24.51px;
+color:#0c3fb4;
+"> Clients</p>
+<p class="mb-4" style="font-family: 'Open Sans';
+font-size: 18px;
+font-weight: 400;
+line-height: 24.51px;
+color:#0c3fb4;
+">Partners</p>
+ 
+
+ <p class="mb-4" style="font-family: 'Open Sans';
+font-size: 18px;
+font-weight: 400;
+line-height: 24.51px;
+color:#0c3fb4;
+">Contact Us</p>
+ </div>
+</div>
+
+
+<hr>
+
+<p class="m-3" style="font-family: 'Open Sans';
+font-size: 16px;
+font-weight: 600;
+color: #0C3FB4;
+">© Designed & developed by United Diamond Technology (UD-Tech)</p>
