"Edit in Contact us "

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="container d-flex justify-content-evenly mb-5 flex-wrap">
+<div class="container d-flex justify-content-evenly my-5 flex-wrap ">
   <div>
     <div class="mb-5">
       <a class="navbar-brand ms-4" routerLink="/" style="color: #0c3fb4; font-size: 28px; font-weight: 600">
@@ -61,80 +61,106 @@
     <p class="mb-3" style="color: #8f90a6">© 2021 . All rights reserved.</p>
   </div>
 
-
   <div>
-     <p class="my-5" style="font-family: 'Open Sans';
-     font-size: 20px;
-     font-weight: 600;
-     line-height: 27.24px;
-color:#0c3fb4;
-     ">Take a Tour</p>
+    <p class="my-5" style="
+        font-family: 'Open Sans';
+        font-size: 20px;
+        font-weight: 600;
+        line-height: 27.24px;
+        color: #0c3fb4;
+      ">
+      Take a Tour
+    </p>
 
-     <p class="mb-4" style="font-family: 'Open Sans';
-     font-size: 18px;
-     font-weight: 400;
-     line-height: 24.51px;
-     color:#0c3fb4;
-     "> About Us</p>
+    <p class="mb-4" style="
+        font-family: 'Open Sans';
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 24.51px;
+        color: #0c3fb4;
+      ">
+      <a class="nav-link about-us" routerLinkActive="active-link" routerLink="/about">About Us</a>
+    </p>
 
-<p class="mb-4" style="font-family: 'Open Sans';
-font-size: 18px;
-font-weight: 400;
-line-height: 24.51px;
-color:#0c3fb4;
-"> Our Values</p>
- <p class="mb-4" style="font-family: 'Open Sans';
- font-size: 18px;
- font-weight: 400;
- line-height: 24.51px;
- color:#0c3fb4;
- "> Our Services</p>
+    <p class="mb-4" style="
+        font-family: 'Open Sans';
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 24.51px;
+        color: #0c3fb4;
+      ">
+      <a class="nav-link values" routerLinkActive="active-link" routerLink="/values">Our Values</a>
+    </p>
+    <p class="mb-4" style="
+        font-family: 'Open Sans';
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 24.51px;
+        color: #0c3fb4;
+      ">
+      <a class="nav-link services" routerLinkActive="active-link" routerLink="/services">Our Services</a>
+    </p>
   </div>
 
+  <div>
+    <p class="my-5" style="
+        font-family: 'Open Sans';
+        font-size: 20px;
+        font-weight: 600;
+        line-height: 27.24px;
+        color: #0c3fb4;
+      ">
+      Our Company
+    </p>
 
-  <div >
-    <p class="my-5" style="font-family: 'Open Sans';
-    font-size: 20px;
-    font-weight: 600;
-    line-height: 27.24px;
-color:#0c3fb4;
-    ">Our Company</p>
+    <p class="mb-4" style="
+        font-family: 'Open Sans';
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 24.51px;
+        color: #0c3fb4;
+      ">
+      <a class="nav-link about-us" routerLinkActive="active-link" routerLink="/about">About Us</a>
+    </p>
 
-    <p class="mb-4" style="font-family: 'Open Sans';
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 24.51px;
-    color:#0c3fb4;
-    "> About us</p>
+    <p class="mb-4" style="
+        font-family: 'Open Sans';
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 24.51px;
+        color: #0c3fb4;
+      ">
+      <a class="nav-link clients" routerLinkActive="active-link" routerLink="/clients">Clients</a>
+    </p>
+    <p class="mb-4" style="
+        font-family: 'Open Sans';
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 24.51px;
+        color: #0c3fb4;
+      ">
+      <a class="nav-link clients" routerLinkActive="active-link" routerLink="/clients">Partners</a>
+    </p>
 
-<p class="mb-4" style="font-family: 'Open Sans';
-font-size: 18px;
-font-weight: 400;
-line-height: 24.51px;
-color:#0c3fb4;
-"> Clients</p>
-<p class="mb-4" style="font-family: 'Open Sans';
-font-size: 18px;
-font-weight: 400;
-line-height: 24.51px;
-color:#0c3fb4;
-">Partners</p>
- 
-
- <p class="mb-4" style="font-family: 'Open Sans';
-font-size: 18px;
-font-weight: 400;
-line-height: 24.51px;
-color:#0c3fb4;
-">Contact Us</p>
- </div>
+    <p class="mb-4" style="
+        font-family: 'Open Sans';
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 24.51px;
+        color: #0c3fb4;
+      ">
+      <a class="nav-link contact-us" routerLinkActive="active-link" routerLink="/contact">Contact Us</a>
+    </p>
+  </div>
 </div>
 
+<hr />
 
-<hr>
-
-<p class="m-3" style="font-family: 'Open Sans';
-font-size: 16px;
-font-weight: 600;
-color: #0C3FB4;
-">© Designed & developed by United Diamond Technology (UD-Tech)</p>
+<p class="m-3" style="
+    font-family: 'Open Sans';
+    font-size: 16px;
+    font-weight: 600;
+    color: #0c3fb4;
+  ">
+  © Designed & developed by United Diamond Technology (UD-Tech)
+</p>
