--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top:150px; margin-bottom: 0px; border: 10px solid red;">
+<div class="container" style="margin-top:150px; margin-bottom: 10px;">
     <div class="subtract1 d-flex row">
       <div class="typography col-lg-5">
         <h2 class="py-5 px-4 pb-1" style="font-size: 25px; font-weight: 600; line-height: 38.4px;">
@@ -24,20 +24,22 @@
   
       </div>
   
+      <div class="subtract2 pb-4">
   
+        <div>
+          <h2  style="color: #0c3fb4; font-size: 22px; font-weight: 600; padding: 130px 40px 0px 40px;">
+            Introduction
+          </h2>
+          <p  style="color: #5a5a5a; font-size: 16.1px; font-weight: 400; max-width: auto; padding: 0 40px 0px 40px;">
+            Global Trading seeks to be an active and strong member participating in the field of shipping and logistics services ,by meeting all customer requirements  and facilitating all obstacles facing companies and individuals in achieving their goals.
+    
+          </p>
+        </div>
+       
+      </div>
     </div>
   
-    <div class="subtract2 pb-4">
-  
-        <h2  style="color: #0c3fb4; font-size: 25px; font-weight: 600; padding: 130px 40px 0px 40px;">
-          Introduction
-        </h2>
-        <p  style="color: #5a5a5a; font-size: 20px; font-weight: 400; max-width: auto; padding: 0 40px 0px 40px;">
-          Global Trading seeks to be an active and strong member participating in the field of shipping and logistics services ,by meeting all customer requirements  and facilitating all obstacles facing companies and individuals in achieving their goals.
-  
-        </p>
-     
-    </div>
+   
   </div>
   
   <!-- <div class="container">
