--- a/src/app/contact-us/contact-us.component.scss
+++ b/src/app/contact-us/contact-us.component.scss
@@ -1,18 +1,19 @@
 .subtract2 {
-    background-image: url(/assets/Subtract.png);
-    background-size: auto;
-    background-repeat: no-repeat;
-    position: relative;
-    bottom: 420px;
-    right: 40px;
-    width: 380px;
-    border-radius: 50px;
-  }
+  background-image: url(/assets/Subtract.png);
+  background-repeat: no-repeat;
+  position: absolute;
+  left: 0px;
+  width: 340px;
+  bottom: 0px;
+  height:430px;
+  border-radius: 20%;
+}
   
   
   .subtract1 {
   
     background-image: url(/assets/Subtract.svg);
+    position: relative;
     background-size: cover;
     border-radius: 50px;
     height: 700px;
