--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -24,7 +24,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link clients" routerLinkActive="active-link" routerLink="/clients">clients</a>
+                    <a class="nav-link clients" routerLinkActive="active-link" routerLink="/clients">Clients</a>
                 </li>
 
                 <li class="nav-item">
